--- a/iPhone.html
+++ b/iPhone.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>iPhone Stacker</title>
+	<title>Project Megaboppa - iPhone Stacker</title>
+	<meta name="description" content="Stacker Game - Informatik HTX Næstved">
+	<meta name="author" content="Daniel M., Marcus S., Nicklas F. & Sebastian B.">
 	<meta name="apple-mobile-web-app-capable" content="yes">
-	<link rel="apple-touch-icon" href="single-page-icon.png">
+	<link rel="apple-touch-icon" href="apple-touch-icon.png">
 	<link rel="apple-touch-startup-image" href="launch.png">
 	<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 	<script type="text/javascript" src="Ijs.js"></script>
