Possible fix for sound - iOS

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
 	<!-- Own meta tags -->
-	<title>Project Megaboppa</title>
+	<title>Project Megaboppa - Stacker</title>
 	<meta name="description" content="Stacker Game - Informatik HTX Næstved">
 	<meta name="author" content="Daniel M., Marcus S., Nicklas F. & Sebastian B.">
 	<link rel="icon" href="favicon.ico">
